# OnlineStore

./: .gitignore  Dockerfile  README.md  app.py  connect_db.py  db.py  docker-compose.yml  init.sql  pyproject.toml
crud_db/: connect_db.py  db.py  test_connect_db.py
orm_db/: connect_db.py  db.py  models.py  test_connect_db.py
tests/: conftest.py  test_app.py  test_crud_db.py  test_onlinestore.py  test_orm_db.py
