[tool.poetry]
name = "OnlineStore"
version = "0.1.0"
description = ""
authors = ["Vladislav Tsarenko <vadiktsarenko@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
psycopg2 = "^2.8.5"
peewee = "^3.13.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
